--- a/html/ticket.html
+++ b/html/ticket.html
@@ -297,7 +297,8 @@
                 <div class="d_ticket_btn" data-aos="zoom-in" data-aos-duration="2000">
 
                     <a href="https://tickets.interpark.com/goods/25004977">
-                        인터파크 티켓 바로가기 </a>
+                        인터파크 티켓 바로가기
+                    </a>
                 </div>
                 <div class="d_ticket_btn" data-aos="zoom-in" data-aos-duration="2000">
                     <a
@@ -438,3 +439,4 @@
 
 
 </html>
+
