--- a/html/guide.html
+++ b/html/guide.html
@@ -212,10 +212,8 @@
         <section>
             <article>
                 <div class="d_sub_title" >
-                    <h2  data-aos="fade-up" data-aos-duration="500"
-     data-aos-anchor-placement="center-center">INCHEON PENTAPORT <br> ROCK FESTIVAL</h2>
-                    <h3  data-aos="fade-up" data-aos-duration="1000"
-     data-aos-anchor-placement="center-center">GUIDE</h3>
+                    <h2 data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-center">INCHEON PENTAPORT <br> ROCK FESTIVAL</h2>
+                    <h3 data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-center">GUIDE</h3>
                 </div>
                 <div>
                     <div class="d_dong_thunder" >
@@ -532,5 +530,6 @@
     <script src="./../js/common.js"></script>
 
 </body>
+
 
 </html>
