--- a/html/guide.html
+++ b/html/guide.html
@@ -528,8 +528,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./../js/guide.js"></script>
     <script src="./../js/common.js"></script>
+	<script>
+  		AOS.init();
+	</script>
 
 </body>
 
 
 </html>
+
